[gd_scene load_steps=8 format=3 uid="uid://c8nsybsamscld"]

[ext_resource type="Script" path="res://Scene/Pages_Utilisateur/main_menu.gd" id="1_chvvj"]
[ext_resource type="Texture2D" uid="uid://bdpsdrverkkmx" path="res://Background LVL/background-essaie.webp" id="2_3ph5c"]
[ext_resource type="PackedScene" uid="uid://bkfl82ewu45if" path="res://Scene/Bouton/bouton_concept.tscn" id="3_i2kxj"]

[sub_resource type="SystemFont" id="SystemFont_oyk65"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_u3ygg"]
font_names = PackedStringArray("Impact", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "")
font_weight = 975
msdf_pixel_range = 29
msdf_size = 60

[sub_resource type="SystemFont" id="SystemFont_04j04"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_2u0ry"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chvvj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ph5c")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = 49.0
offset_right = -1.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="séparation" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.568627, 1)
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = SubResource("SystemFont_oyk65")
theme_override_font_sizes/font_size = 50
text = "Back To Home "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="séparation2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_Start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_stretch_ratio = 1.1
theme_override_fonts/font = SubResource("SystemFont_u3ygg")
theme_override_font_sizes/font_size = 40
text = "START GAME"

[node name="séparation" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_lvl" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_04j04")
theme_override_font_sizes/font_size = 40
text = "LEVEL"

[node name="séparation3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_2u0ry")
theme_override_font_sizes/font_size = 40
text = "EXIT"

[node name="Bouton_Concept" parent="." instance=ExtResource("3_i2kxj")]
